--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
             <a href="#ansible">Ansible</a> |
             <a href="#podsumowanie">Podsumowanie</a>
         </p>
-        <p>&copy; 2025 Texts and design by Maciej Kołodziej & Szymon Nagodziński</p>
+        <p>&copy; 2025 Texts and design by <a href="mailto:m.kolodziej@eduwarszawa.pl">Maciej Kołodziej</a> & <a href="mailto:SNagodzinski@uczen.eduwarszawa.pl">Szymon Nagodziński</a></p>
+        <p>Kontakt <a href="mailto:sekretariat.zsbn@eduwarszawa.pl">Sekretariat szkolny</a></p>
     </footer>
 
     <script src="script.js"></script>
