--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <a href="#ansible">Ansible</a> |
             <a href="#podsumowanie">Podsumowanie</a>
         </p>
-        <p><a href="mailto:sekretariat.zsbn@eduwarszawa.pl">Technikum nr. 9 Lotnicze</a>+48 22 846 00 48</p>
+        <p><img src="img/logo.png" width="60" height="60"><a href="mailto:sekretariat.zsbn@eduwarszawa.pl">Technikum nr. 9 Lotnicze</a>+48 22 846 00 48</p>
         <p>&copy; 2025 Texts and design by<a href="mailto:m.kolodziej@eduwarszawa.pl">Maciej Kołodziej</a>&<a href="mailto:SNagodzinski@uczen.eduwarszawa.pl">Szymon Nagodziński</a></p>
     </footer>
 
